--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,13 +23,28 @@
 </table>
 
 <h2>New book</h2>
+
+<% if @book.errors.any? %>
+  <div id="error_explanation" class="alert alert-danger">
+    <h2>
+      <%= @book.errors.count %>errors prohibited this book from being saved:
+      </h2>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
+
 <%= form_with model:@book, local: true do |f| %>
   <div class="field">
-    <label for="book_title">Title</label>
+    <%= f.label :title, class: "label" %>
     <%= f.text_field :title %>
   </div>
   <div class="field">
-    <label for="book_body">Body</label>
+    <%= f.label :body, class: "label" %>
     <%= f.text_area :body%>
   </div>
   <div class="actions">
