[Update]link_toに変更

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -8,6 +8,6 @@
   では、さまざまな書籍に関するあなたの意見や
   <p>印象を共有し交換することができます</p>
   <P>
-    <a href="/books">Start</a>
+    <%= link_to 'Start', books_path %>
   </P>
 </p>
