--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,8 @@
  *= require_self
  */
 
+ @import "loading";
+
 body {
     background-color: #fff;
     color: #333;
@@ -47,6 +49,7 @@ p, ol, ul, td {
 a {
     color: #000;
 }
+
  a:hover {
    background-color: #000;
    color: #fff;
@@ -98,3 +101,32 @@ label {
     background-color: #c00;
     color: #fff;
 }
+
+.swiper {
+    width: 90%;
+    height: 500px;
+}
+
+.swiper-slide {
+    text-align: center;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    display: block;
+    object-fit: cover;
+}
+
